--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body{
-                background-color:blue ;
-            }
+        background-color:navy;
+        border:2px solid black;
+        font-size:105%;
+        font-weight:bolder;
+        font-family: Verdana, Geneva, Tahoma, sans-serif; 
+        font-style: italic; 
+        text-decoration: solid;
+        
+    }  
             
 h1{
                 text-align: center;
